deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: oneview-acm-bmhs
  namespace: open-cluster-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oneview-acm-bmhs
  template:
    metadata:
      labels:
        app: oneview-acm-bmhs
    spec:
      restartPolicy: Always
      serviceAccountName: multicluster-operators
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      imagePullPolicy: IfNotPresent
      containers:
        - name: cli
          image: 'registry.access.redhat.com/ubi7/ubi'
          command:
            - bash
            - '-c'
            - >-
              [...]
          volumeMounts:
            - name: bmhs
              mountPath: bmhs 
            - name: hosts
              mountPath: hosts        
            - name: last
              mountPath: old                 
        - name: server
          command:
            - python3
            - server.py
            - '8080'            
          ports:
            - containerPort: 8080
              protocol: TCP
          image: 'quay.io/feven/oneview-2-acm-host:latest'
          volumeMounts:
            - name: bmhs
              mountPath: /opt/app-root/src/bmhs  
            - name: hosts
              mountPath: /opt/app-root/src/hosts        
      serviceAccount: multicluster-operators
      volumes:
        - name: bmhs
          emptyDir: {}   
        - name: hosts
          emptyDir: {}  
        - name: last
          emptyDir: {}
